// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InventorySubscriptionsContext should handle an onScroll event: onPage event, dispatch 1`] = `
[
  [
    [
      {
        "offset": 100,
        "type": "SET_QUERY_RHSM_GUESTS_INVENTORY_offset",
        "viewId": "1234567890",
      },
      {
        "limit": 100,
        "type": "SET_QUERY_RHSM_GUESTS_INVENTORY_limit",
        "viewId": "1234567890",
      },
    ],
  ],
  [
    [
      {
        "type": "SET_QUERY_CLEAR_INVENTORY_GUESTS_LIST",
        "viewId": "1234567890",
      },
      {
        "id": "1234567890",
        "type": "CLEAR_INVENTORY_GUESTS",
      },
    ],
  ],
]
`;

exports[`InventorySubscriptionsContext should handle instances inventory API responses: inventory, cancelled 1`] = `
{
  "cancelled": true,
  "data": [],
  "fulfilled": false,
}
`;

exports[`InventorySubscriptionsContext should handle instances inventory API responses: inventory, error 1`] = `
{
  "data": [],
  "error": true,
  "fulfilled": false,
}
`;

exports[`InventorySubscriptionsContext should handle instances inventory API responses: inventory, fulfilled 1`] = `
{
  "data": [],
  "fulfilled": true,
}
`;

exports[`InventorySubscriptionsContext should handle instances inventory API responses: inventory, pending 1`] = `
{
  "data": [],
  "fulfilled": false,
  "pending": true,
}
`;

exports[`InventorySubscriptionsContext should return specific properties: specific properties 1`] = `
{
  "useGetGuestsInventory": [Function],
  "useOnScroll": [Function],
  "useSelectorsGuestsInventory": [Function],
}
`;
